--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^7.8.2",
     "react-router-hash-link": "^2.4.3",
     "react-scroll": "^1.9.3",
     "react-slick": "^0.31.0",
